# flashback-full-app

./: .gitignore
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  hello.py  main.py  models.py
backend/app/services/: ai_service.py  db_service.py  file_service.py  video_service.py  video_service_v2.py
backend/artifacts/sample/: test.srt
front/: .env  package.json  pnpm-lock.yaml
front/app/: root.tsx  routes.ts
front/app/components/: FileUpload.tsx  Sidebar.tsx  VideoList.tsx  VideoProcessing.tsx
front/app/pages/: dashboard.tsx
front/app/routes/: home.tsx
